Prevent text wrapping in truth table's ths

--- a/src/components/FormattedTextRenderer.module.scss
+++ b/src/components/FormattedTextRenderer.module.scss
@@ -137,6 +137,12 @@ $table-striped-columns-order: even;
   :global(.table-truth) {
     font-size: $font-size-sm;
     overflow-x: auto;
+
+    > table {
+      > :not(caption) > * > th {
+        white-space: nowrap;
+      }
+    }
   }
 
 }
